--- a/Explore.html
+++ b/Explore.html
@@ -73,7 +73,7 @@
 					<div class="templatemo-content-box templatemo-second-box">
 						<h2 class="templatemo-brown">🤗 Available Subscription Coupons</h2>
 						<h3 class="templatemo-gold">"Only Available For Limited Time ⌚.. Hurry Up Guyss!!! 🏃"</h3>
-                        <a href="Login.html" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(201, 84, 38);">Add Coupons🤭</a>
+                        <a href="AddCoupon.html" class="btn text-uppercase templatemo-btn templatemo-info-btn" style="background-color: rgb(201, 84, 38);">Add Coupons🤭</a>
 						
 						</div>					
 				</div>
@@ -100,7 +100,7 @@
                                                         <div class="templatemo-service-content text-left">
                                                             <h3 class="templatemo-service-title templatemo-brown">About Coupon 🤔</h3>
                                                             <p class="templatemo-service-description">Desc idhr dalna................</p>
-                                                            <h3 class="templatemo-service-title templatemo-brown">Username 🙊</h3>
+                                                            <h3 class="templatemo-service-title templatemo-brown">By: 🙊</h3>
                                                             <p class="templatemo-service-description">Username yaha</p>
                                                         </div>						
                                                     </div>
@@ -117,7 +117,7 @@
                                                     <div class="templatemo-service-container">
                                                         <img src="images/plan-3.png" alt="Plan 3" class="templatemo-service-image">
                                                         <div class="templatemo-service-content text-left">
-                                                            <h3 class="templatemo-service-title templatemo-brown">Date 📅</h3>
+                                                            <h3 class="templatemo-service-title templatemo-brown">Expiry Date 📅</h3>
                                                             <p class="templatemo-service-description">date yaha</p>	
                                                         </div>						
                                                     </div>	
@@ -143,7 +143,7 @@
                                                         <div class="templatemo-service-content text-left">
                                                             <h3 class="templatemo-service-title templatemo-brown">About Coupon 🤔</h3>
                                                             <p class="templatemo-service-description">Desc idhr dalna................</p>
-                                                            <h3 class="templatemo-service-title templatemo-brown">Username 🙊</h3>
+                                                            <h3 class="templatemo-service-title templatemo-brown">By: 🙊</h3>
                                                             <p class="templatemo-service-description">Username yaha</p>
                                                         </div>						
                                                     </div>
@@ -160,7 +160,7 @@
                                                     <div class="templatemo-service-container">
                                                         <img src="images/plan-3.png" alt="Plan 3" class="templatemo-service-image">
                                                         <div class="templatemo-service-content text-left">
-                                                            <h3 class="templatemo-service-title templatemo-brown">Date 📅</h3>
+                                                            <h3 class="templatemo-service-title templatemo-brown">Expiry Date 📅</h3>
                                                             <p class="templatemo-service-description">date yaha</p>	
                                                         </div>						
                                                     </div>	
